--- a/pypmed_example_usage.ipynb
+++ b/pypmed_example_usage.ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -19,6 +19,37 @@
         "from datetime import datetime\n",
         "from thefuzz import fuzz\n",
         "current_year = datetime.now().year\n",
+        "\n",
+        "\n",
+        "def institution_check(institution: str, \n",
+        "                      affiliation_info: str) -> int:\n",
+        "    # define score \n",
+        "    overall_score = 0\n",
+        "    institution_split = institution.split()\n",
+        "    aff_split = affiliation_info.lower().split()\n",
+        "    \n",
+        "    # loop through each word in the institution name, check match with each word in the affiliation info\n",
+        "    for u in institution_split:\n",
+        "        ind_best=0\n",
+        "        val_best = 0\n",
+        "        for i, a in enumerate(aff_split):\n",
+        "            s = fuzz.ratio(u, a)\n",
+        "            if s > val_best:\n",
+        "                val_best = s\n",
+        "                ind_best = i\n",
+        "        \n",
+        "        # remove index of best match\n",
+        "        overall_score += val_best\n",
+        "        del aff_split[ind_best]\n",
+        "    # average overall score\n",
+        "    overall_score /= len(institution_split)\n",
+        "    return overall_score\n",
+        "\n",
+        "\n",
+        "def name_score(query_author_name: str, \n",
+        "               author_list_name: str) -> int:    \n",
+        "    return fuzz.ratio(query_author_name, author_list_name)\n",
+        "\n",
         "\n",
         "# function to convert XML ElementTree element to a dictionary\n",
         "def elem_to_dict(elem):\n",
@@ -56,7 +87,54 @@
         "    return search_string\n",
         "\n",
         "\n",
+        "def author_metadata_filter(author_metadata: dict, \n",
+        "                           article_dict: dict,\n",
+        "                           author_list) -> list:\n",
+        "    # unpack current metadata\n",
+        "    author_query_name = author_metadata['author_first_name'] + ' ' + author_metadata['author_last_name']\n",
+        "    institution = author_metadata['institution']\n",
+        "    \n",
+        "    # loop over authors in author list and calculate score\n",
+        "    best_match = None\n",
+        "    best_score = 0\n",
+        "    for item in author_list:\n",
+        "        # create author name\n",
+        "        last_name = item['LastName'].lower()\n",
+        "        first_name = item['ForeName'].lower()\n",
+        "        author_list_name = first_name + ' ' + last_name\n",
+        "        \n",
+        "        # compute score\n",
+        "        score = name_score(author_query_name, author_list_name)\n",
+        "        \n",
+        "        # check if score is better than previous best\n",
+        "        if score > best_score and score > 80:\n",
+        "            best_score = score\n",
+        "            best_match = item\n",
+        "            \n",
+        "    # check if best match for name is not None - if so article is confirmed for author\n",
+        "    if best_match is not None:\n",
+        "        # add author info to article package\n",
+        "        article_dict['author_first_name'] = author_metadata['author_first_name']\n",
+        "        article_dict['author_last_name'] = author_metadata['author_last_name']\n",
+        "                \n",
+        "        # check affiliation if provided \n",
+        "        if institution is not None:\n",
+        "            affiliation_info = best_match['AffiliationInfo']['Affiliation']\n",
+        "            score = institution_check(institution, affiliation_info)\n",
+        "            if score > 80:\n",
+        "                # author and institution confirmed - add to return list\n",
+        "                article_dict['institution'] = institution\n",
+        "                            \n",
+        "        return article_dict\n",
+        "    return None\n",
+        "                            \n",
+        "\n",
         "def query_pubmed(search_criteria: dict, limit: int = 10):\n",
+        "    # unpack institution if present - not a search criteria for official pubmed api\n",
+        "    institution = None\n",
+        "    if 'institution' in search_criteria.keys():\n",
+        "        institution = search_criteria['institution']\n",
+        "    \n",
         "    # build query string from input search_criteria\n",
         "    query_str = build_query_string(search_criteria)\n",
         "            \n",
@@ -87,11 +165,10 @@
         "        \n",
         "        # make request\n",
         "        response = requests.get(url, params=params)\n",
-        "        print('a')\n",
         "        \n",
         "        # if response is ok, parse the xml and convert to a dictionary\n",
         "        if response.ok:\n",
-        "            # # Parse the XML file\n",
+        "            # Parse the XML file\n",
         "            root = ET.fromstring(response.text)\n",
         "\n",
         "            # Convert the root element to a dictionary\n",
@@ -102,75 +179,93 @@
         "                    article_list = [article_list]\n",
         "            except:\n",
         "                print(f\"No articles found for search criteria: {search_criteria}\")\n",
-        "            return article_list\n"
+        "                return None\n",
+        "                \n",
+        "            # filter articles by checking that desired author / institution is present            \n",
+        "            final_articles = []\n",
+        "            for article in article_list:\n",
+        "                # generate example\n",
+        "                pmid = article['MedlineCitation']['PMID']\n",
+        "                journal_issn = article['MedlineCitation']['Article']['Journal']['ISSN']\n",
+        "                journal_title = article['MedlineCitation']['Article']['Journal']['Title']\n",
+        "                article_title = article['MedlineCitation']['Article']['ArticleTitle']\n",
+        "                publication_year = article['MedlineCitation']['Article']['Journal']['JournalIssue']['PubDate']['Year']\n",
+        "                author_list = article['MedlineCitation']['Article']['AuthorList']['Author']\n",
+        "\n",
+        "                # start article package\n",
+        "                article_dict = {}\n",
+        "                article_dict['pmid'] = pmid\n",
+        "                article_dict['journal_issn'] = journal_issn\n",
+        "                article_dict['journal_title'] = journal_title\n",
+        "                article_dict['article_title'] = article_title\n",
+        "                article_dict['publication_year'] = publication_year\n",
+        "\n",
+        "                # if author search - perform filtering (double check that correct author is pulled)\n",
+        "                if search_criteria['author_first_name'] is not None and search_criteria['author_last_name'] is not None:\n",
+        "                    # package author info for filter\n",
+        "                    author_metadata = {}\n",
+        "                    author_metadata['author_first_name'] = search_criteria['author_first_name']\n",
+        "                    author_metadata['author_last_name'] = search_criteria['author_last_name']\n",
+        "                    author_metadata['institution'] = institution\n",
+        "                    \n",
+        "                    # apply filter\n",
+        "                    filtered_article = author_metadata_filter(author_metadata, article_dict, author_list)\n",
+        "                    \n",
+        "                    # store \n",
+        "                    if filtered_article is not None:\n",
+        "                        final_articles.append(filtered_article)\n",
+        "                else:\n",
+        "                    article_dict['author_list'] = author_list\n",
+        "                    final_articles.append(article_dict)\n",
+        "                \n",
+        "                return final_articles\n",
+        "        return None"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "a\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "search_criteria = {'author_first_name': 'rachel', \n",
         "                   'author_last_name': 'gottschalk', \n",
-        "                   'publication_year': 2022\n",
+        "                   'publication_year': 2022,\n",
+        "                   'institution':  'university of pittsburgh at pittsburgh'\n",
         "                   }\n",
         "response = query_pubmed(search_criteria=search_criteria)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "example = response[0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "dict_keys(['PMID', 'DateCompleted', 'DateRevised', 'Article', 'MedlineJournalInfo', 'ChemicalList', 'CitationSubset', 'MeshHeadingList'])"
+              "[{'pmid': '35063833',\n",
+              "  'journal_issn': '1879-0372',\n",
+              "  'journal_title': 'Current opinion in immunology',\n",
+              "  'article_title': 'Mechanisms encoding STAT functional diversity for context-specific inflammatory responses.',\n",
+              "  'publication_year': '2022',\n",
+              "  'author_first_name': 'rachel',\n",
+              "  'author_last_name': 'gottschalk',\n",
+              "  'institution': 'university of pittsburgh at pittsburgh'}]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 65,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "pmid = example['MedlineCitation']['PMID']\n",
-        "author_list = example['MedlineCitation']['Article']['AuthorList']\n",
-        "example['MedlineCitation'].keys()"
+        "response\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "author_ = author_list['Author'][1]\n",
-        "last_name = author_['LastName'].lower()\n",
-        "first_name = author_['ForeName'].lower()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -179,7 +274,7 @@
               "27"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -212,71 +307,107 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "94"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "from thefuzz import fuzz\n",
-        "\n",
-        "fuzz.ratio(search_criteria['author_first_name'] + search_criteria['author_last_name'], first_name + last_name)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "('e', 60)"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "from thefuzz import process\n",
-        "process.extractOne(university, affiliation_info.lower())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "university\n",
-        "overall_score = 0\n",
-        "university_split = university.split()\n",
-        "aff_split = affiliation_info.lower().split()\n",
-        "for u in university_split:\n",
-        "    ind_best=0\n",
-        "    val_best = 0\n",
-        "    for i, a in enumerate(aff_split):\n",
-        "        s = fuzz.ratio(u, a)\n",
-        "        if s > val_best:\n",
-        "            val_best = s\n",
-        "            ind_best = i\n",
-        "    \n",
-        "    # remove index of best match\n",
-        "    overall_score += val_best\n",
-        "    del aff_split[ind_best]\n",
-        "# average overall score\n",
-        "overall_score /= len(university_split)"
+        "example = response[0]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(response)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "                    \n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'LastName': 'Gottschalk',\n",
+              " 'ForeName': 'Rachel A',\n",
+              " 'Initials': 'RA',\n",
+              " 'AffiliationInfo': {'Affiliation': 'Department of Immunology, University of Pittsburgh School of Medicine, University of Pittsburgh, Pittsburgh, PA, USA; Center for Systems Immunology, University of Pittsburgh, Pittsburgh, PA, USA. Electronic address: rachel.gottschalk@pitt.edu.'}}"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "best_match"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found match with score 87.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "institution = 'university of pittsburgh at pittsburgh'\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        " institution_check(institution, affiliation_info)"
       ]
     },
     {
@@ -296,6 +427,10 @@
         }
       ],
       "source": [
+        "    author_ = author_list['Author'][1]\n",
+        "    last_name = author_['LastName'].lower()\n",
+        "    first_name = author_['ForeName'].lower()\n",
+        "\n",
         "overall_score"
       ]
     }
