--- a/pypmed_example_usage.ipynb
+++ b/pypmed_example_usage.ipynb
@@ -5,7 +5,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# pypmed"
+        "# pypmed example"
       ]
     },
     {
@@ -14,23 +14,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import requests\n",
-        "from xml.etree import ElementTree as ET\n",
-        "from datetime import datetime\n",
-        "current_year = datetime.now().year\n",
-        "\n",
-        "import requests\n",
-        "import time\n",
-        "from requests.exceptions import RequestException\n",
-        "from typing import Dict, List\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "                            \n",
-        "\n"
+        "!pip install pypmed"
       ]
     },
     {
@@ -48,12 +32,15 @@
         }
       ],
       "source": [
+        "from pypmed import apis \n",
+        "\n",
         "search_criteria = {'author_first_name': 'rachel', \n",
         "                   'author_last_name': 'gottschalk', \n",
         "                   'institution':  'university of pittsburgh at pittsburgh',\n",
         "                   'publication_year': 2022\n",
         "                   }\n",
-        "response = query_pubmed(search_criteria=search_criteria)"
+        "\n",
+        "response = apis.query_pubmed_api(search_criteria=search_criteria)"
       ]
     },
     {
